Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106109

Deduplicate error handling in qlowenergycontroller_darwin

XMLWordPrintable

    • iOS/tvOS/watchOS, macOS
    • 5d4bf03fce (qt/qtconnectivity/dev) 5d4bf03fce (qt/tqtc-qtconnectivity/dev)

      QLowEnergyControllerDarwin::setErrorDescription() is essentially a duplication of QLowEnergyControllerPrivate::setError(). The only difference - it does not emit errorOccurred() signal (initially, I wanted to separate error setting and emitting and was emitting via invokeMethod it would appear). Looking at the currect code - it's not a big deal if setError() also emits errorOccurred(), but what's not nice is the necessity to duplicate error strings and keep them in sync with setError(). Would be nice to get rid of setErrorDescription() and simplify the private class.

        For Gerrit Dashboard: QTBUG-106109
        # Subject Branch Project Status CR V

            tpochep Timur Pocheptsov
            tpochep Timur Pocheptsov
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes