QLowEnergyControllerDarwin: clean up the code

1. Remove tvOS-related ifdefs - we don't support tvOS anymore.
2. Delete setErrorDescription function, it is essentially a
   duplication of setError (differs only that it does not emit).
   These days we are using it only to report the nullptr in LE queue,
   but in general all such cases must be asserted instead.

Fixes: QTBUG-106109
Change-Id: Iccf44b94746a720728e4a66fba9bd8708c2de3b6
Reviewed-by: Juha Vuolle <juha.vuolle@insta.fi>